# testbed-management

./: LICENSE  README.md
client/: Cargo.toml
client/assets/: experiment-hooks.yml
client/src/: main.rs  manager.rs
cluster-manager/: .gitignore  Cargo.toml
cluster-manager/assets/: dnsmasq-default.conf  experiment-hooks.yaml  experiment.yaml
cluster-manager/src/: config.rs  database.rs  deployer.rs  installer.rs  logs_manager.rs  main.rs  manager.rs  node_manager.rs  power_manager.rs  server.rs  watcher.rs
esp32/: relay.ino  relay_and_serial.ino  relay_serial_and_logging.ino
imagefile_parser/: .gitignore  Cargo.toml  answers  nginxpower.conf  preseed.cfg  run-debian.sh  run.sh  script.py
imagefile_parser/assets/: Imagefile-alpine-x86  Imagefile-child  Imagefile-debian-x86-local  Imagefile-debian-x86-netboot  Imagefile-k3s-master  Imagefile-linpack  Imagefile-pi  Imagefile-raspbian  Imagefile-raspbian-fio  Imagefile-raspbian-fio-local  Imagefile-raspbian-iperf  Imagefile-raspbian-power  Imagefile-raspbian-sdcard  Imagefile-raspbian-stress  Imagefile-raspbian-sysbench  Imagefile-raspbian-uart  Imagefile-ubuntu  Imagefile-ubuntu-x86  Imagefile-ubuntu-x86-fio  arm-template.pkr.hcl  iso-template.pkr.hcl
imagefile_parser/src/: builder.rs  client.rs  main.rs  parser.rs
logstash/: docker-compose.yml
logstash/pipeline/: http.conf
logstash/settings/: logstash.yml  pipelines.yml
powersource-scripts/: curl-call.sh  http-poe-switch.sh  smart-plug.sh  snmp-poe-switch.sh
structs/: .gitignore  Cargo.toml
structs/src/: architecture.rs  arm_preamble.rs  bootconfig.rs  configuration.rs  deployment.rs  deployment_row.rs  image.rs  image_row.rs  imagefile.rs  lib.rs  logsource.rs  mountpoint.rs  node.rs  node_row.rs  partition.rs  post_provisioner.rs  power_action.rs  power_action_set.rs  preamble.rs  provisioner.rs  service.rs  service_row.rs  task.rs  utils.rs  x86_preamble.rs
