[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.17"
structs = { path = "../structs" }
prettytable-rs = { version = "0.8.0", git = "https://github.com/reschandreas/prettytable-rs" }
reqwest = { version = "0.11.16", features = ["json"] }
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
yaml-rust = "0.4"