[package]
name = "cluster-manager"
version = "0.1.0"
authors = ["Andreas Resch <andreas@resch.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.1"
cmd_lib = "1.3.0"
prettytable-rs = { version = "0.8.0", git = "https://github.com/reschandreas/prettytable-rs" }
structs = { path = "../structs" }
colored = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml-rust = "0.4"
config = "0.13.3"
rusqlite = { version = "0.29.0", features = ["chrono"] }
chrono = { version = "0.4.24", features = ["serde"]}
sudo = "0.6.0"
rand = "0.8.5"
which = "4.4.0"
string-builder = "0.2.0"
linemux = "0.3.0"
tokio = { version = "1.29.1", features = ["full"] }
actix-web = "4.3.1"
env_logger = "0.10.0"
actix-rt = "2.8.0"
actix-multipart = "0.6.0"
futures = "0.3.28"