[package]
name = "structs"
version = "0.1.0"
authors = ["Andreas Resch <andreas@resch.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string-builder = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
names = "0.11.0"
colored = "2"
yaml-rust = "0.4"
rusqlite = { version = "0.25.3", features = ["chrono"] }
chrono = { version = "0.4.24", features = ["serde"]}
prettytable-rs = { version = "0.8.0", git = "https://github.com/reschandreas/prettytable-rs" }
itertools = "0.10.1"
config = "0.11.0"